# route-manager-api

./: .env  .gitignore  LICENSE  README.md  app_flow.drawio  main.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  scheduler.py  schemas.py  utils.py
app/core/: config.py  logging.py  scheduler.py
app/db/: database.py  routes.py
app/db/models/: deleted_routes.py  routes.py
app/routers/: __init__.py  routes.py
app/schemas/: routes.py
app/services/: auth.py  lifecycle.py  routes.py  utils.py
app/tests/: conftest.py  test_routes.py
app/tests/routes/: conftest.py  test_delete.py  test_get.py  test_loop.py  test_patch.py  test_pause.py  test_put.py
config/: config.conf
